Added Comments to scripts.js

--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -14,6 +14,7 @@
       <a href="#e4">Ejercicio4</a>
       <a href="#e5">Ejercicio5</a>
       <a href="#todas">Todos</a>
+      <a href="#referencias">Referencias</a>
     </nav>
 
     <section id="preguntas">
