--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
     <title>Lab 4 DAW</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
