--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -32,14 +32,10 @@
         <h1>Shop</h1>
         <article>
             <div class=shopItem>
-                <img alt="" src=""/>
+                <img alt="" class=hue id="hue" src="img/cap.png"/>
                 <span id="price">$23</span>
-                <label for=select>Add to Cart</label>
-                <input type=button id=select />
-            </div>
-            <div class=shopItem>
-                <img alt="" src=""/>
-                <span id="price">$50</span>
+                <label for=hueSl>Hue</label>
+                <input type="range" min="0" max="360" value="0" id="hueSl" />
                 <label for=select>Add to Cart</label>
                 <input type=button id=select />
             </div>
