Added automatically generated shop items

--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -29,17 +29,7 @@
     </section>
     <hr>
     <section id="shop">
-        <h1>Shop</h1>
-        <article>
-            <div class=shopItem>
-                <img alt="" class=hue id="hue" src="img/cap.png"/>
-                <span id="price">$23</span>
-                <label for=hueSl>Hue</label>
-                <input type="range" min="0" max="360" value="0" id="hueSl" />
-                <label for=select>Add to Cart</label>
-                <input type=button id=select />
-            </div>
-        </article>
+        <h1>Shop</h1><br>
     </section>
 
     <script src="password.js"></script>
