Shop button in items now add to cart, color dropdown changes color and cart is displayed

--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -32,6 +32,10 @@
         <h1>Shop</h1><br>
     </section>
 
+    <footer id="footer">
+        *Prices include VAT
+    </footer>
+
     <script src="password.js"></script>
     <script src="products.js"></script>
     </body>
