Added navigation and sources

--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -6,8 +6,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+    <nav>
+        <a href="#password">PasswordChecker</a>
+        <a href="#shop">Shop</a>
+
+        <a href="#referencias">Referencias</a>
+    </nav>
+
     <section id="password">
-        <h1>Password</h1>
+        <h1>Password Checker</h1>
         <article>
             <label for=enterPass>Password: </label>
             <input type=password id=enterPass placeholder="Enter your password"/>
@@ -32,8 +39,17 @@
         <h1>Shop</h1><br>
     </section>
 
-    <footer id="footer">
-        *Prices include VAT
+
+    <footer id="referencias">
+        <h1>Referencias</h1>
+        <ul>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference" target="_blank">developer.mozilla.org/en-US/docs/Web/JavaScript/Reference</a></li>
+            <li><a href="https://javascript.info/regexp-character-sets-and-ranges" target="_blank">javascript.info/regexp-character-sets-and-ranges</a></li>
+            <li><a href="https://www.w3schools.com/" target="_blank">w3schools</a></li>
+        </ul>
+        <h4 id="asterisk">
+            *Prices include VAT
+        </h4>
     </footer>
 
     <script src="password.js"></script>
