--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -10,7 +10,7 @@
         <a href="#password">PasswordChecker</a>
         <a href="#shop">Shop</a>
 
-        <a href="#referencias">Referencias</a>
+        <a href="#sources">Sources</a>
     </nav>
 
     <section id="password">
@@ -40,8 +40,8 @@
     </section>
 
 
-    <footer id="referencias">
-        <h1>Referencias</h1>
+    <footer id="sources">
+        <h1>Sources</h1>
         <ul>
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference" target="_blank">developer.mozilla.org/en-US/docs/Web/JavaScript/Reference</a></li>
             <li><a href="https://javascript.info/regexp-character-sets-and-ranges" target="_blank">javascript.info/regexp-character-sets-and-ranges</a></li>
