Revert "Fixed emojis not displaying"
This reverts commit 9a2f3f6aff9bf664eafebac6fe45088b52ed828c.

--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -86,8 +86,8 @@
         </h4>
     </footer>
 
-    <script src="password.js" charset="utf-8"></script>
-    <script src="products.js" charset="utf-8"></script>
-    <script src="signup.js" charset="utf-8"></script>
+    <script src="password.js"></script>
+    <script src="products.js"></script>
+    <script src="signup.js"></script>
     </body>
 </html>
