--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -55,6 +55,24 @@
             </article>
         </section>
         <hr>
+        <section id="interYtime">
+            <h1>Intervals y Timeout</h1>
+            <article>
+                <h2>Cronómetro usando Interval</h2>
+                <input type="button" value="Iniciar Cronómetro" id="cronoStart" onclick="startCrono()">
+                <input type="button" value="Parar Cronómetro" id="cronoStop" onclick="stopCrono()">
+                <input type="button" value="Reiniciar Cronómetro" id="cronoRe" onclick="clearCrono()">
+                <span id="crono"></span>
+            </article>
+            <article>
+                <h2>Temporizador usando Timeout</h2>
+                <label for="tempSeg">Segundos</label>
+                <input type="number" id="tempSeg">
+                <input type="button" value="Iniciar Temporizador" id="tempS" onclick="startTemp()">
+            </article>
+
+        </section>
+        <hr>
         <section id="preguntas">
             <h1>Preguntas</h1>
             <article>
