se agregó sección drag&drop y se completaron las preguntas

--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -73,6 +73,22 @@
 
         </section>
         <hr>
+        <section class="dragDrop">
+            <h1>Drag & Drop</h1>
+            <article>
+                <div class="dropTarget">
+                    <p draggable="true" id="draggable1"> ASDFDa </p>
+                </div>
+                <div class="dropTarget">
+                    <p draggable="true" id="draggable2"> ASDFDb </p>
+                </div>
+                <div class="dropTarget"></div>
+                <div class="dropTarget"></div>
+                <div class="dropTarget"></div>
+                <div class="dropTarget"></div>
+            </article>
+        </section>
+        <hr>
         <section id="preguntas">
             <h1>Preguntas</h1>
             <article>
@@ -90,21 +106,19 @@
                 Los valores estandar son <code>visible</code> y <code>hidden</code> pero tambien existe <code>collapse</code> para colapsar tablas
             </article>
             <article>
-                <h2>¿Qué es el <code>zIndex</code> y para qué sirve?</h2>
+                <h2>¿Qué es el <code>z-index</code> y para qué sirve?</h2>
+                Es una propiedad de estilo en CSS que sirve para dar orden de profundidad a elementos (cual se ve encima de otro en caso de interlapar)
             </article>
         </section>
 
-<!--        <section id="referencias">-->
-<!--            <h1>Referencias</h1>-->
-<!--            <article>-->
-<!--                <ul>-->
-<!--                    <li><a href="" target="_blank"></a></li>-->
-<!--                </ul>-->
-<!--            </article>-->
-<!--        </section>-->
-
-<!--        <footer id="footer">-->
-<!--        </footer>-->
+        <footer id="sources">
+            <h1>Sources</h1>
+            <ul>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference" target="_blank">developer.mozilla.org/en-US/docs/Web/JavaScript/Reference</a></li>
+                <li><a href="https://javascript.info/regexp-character-sets-and-ranges" target="_blank">javascript.info/regexp-character-sets-and-ranges</a></li>
+                <li><a href="https://www.w3schools.com/" target="_blank">w3schools</a></li>
+            </ul>
+        </footer>
         <script src="scripts.js"></script>
     </body>
 </html>
