--- a/Lab7/index.html
+++ b/Lab7/index.html
@@ -96,6 +96,7 @@
             <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference" target="_blank">developer.mozilla.org/en-US/docs/Web/JavaScript/Reference</a></li>
             <li><a href="https://javascript.info/regexp-character-sets-and-ranges" target="_blank">javascript.info/regexp-character-sets-and-ranges</a></li>
             <li><a href="https://www.w3schools.com/" target="_blank">w3schools</a></li>
+            <li><a href="https://getmdl.io/" target="_blank">Material Design Lite</a></li>
         </ul>
         <h4 id="asterisk">
             *Prices include VAT
