Add sessionExpired, accountSettings and icon on nav

--- a/Lab12/_footer.html
+++ b/Lab12/_footer.html
@@ -7,9 +7,10 @@
 <script>
 
     document.addEventListener('DOMContentLoaded', function() {
-        var elems = document.querySelectorAll('.carousel');
-        var instances = M.AutoInit();
+        var elems = document.querySelectorAll('.sidenav');
+        var instances = M.Sidenav.init(elems);
     });
+
 
 </script>
 
