--- a/Lab12/_user.html
+++ b/Lab12/_user.html
@@ -1,3 +1,3 @@
 
-<h1>USER</h1>
-
+<h2>Hello <?= ucfirst($_SESSION["user"]) ?>! Good <?=$greet?></h2>
+<a class="waves-effect waves-light btn" href="ajustesCuenta.php"><i class="material-icons right">person</i>Edit Profile</a>
