--- a/Lab12/_header.html
+++ b/Lab12/_header.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="styles.css">
 
 
 
@@ -14,8 +15,60 @@
 </head>
 
 <body>
-<?php if (isset($_SESSION["user"])): ?>
-<div class="right-align"> <a href="#"> <i class="Small material-icons">file_upload</i></a> | <strong><?=$_SESSION["user"]?> | </strong>
-    <a href="cerrarSesion.php">Salir <i class="Small material-icons">directions_run</i></a></div>
-<?php endif; ?>
+<?php if (isset($_SESSION["user"])){
+    date_default_timezone_set('America/Mexico_City');
+    $time = date("H");
+    $greet = "";
+    if ($time < "12") {
+        $greet = "morning";
+    } else if ($time >= "12" && $time < "17") {
+        $greet = "afternoon";
+    } else if ($time >= "17" && $time < "19") {
+        $greet = "evening";
+    } else
+    if ($time >= "19") {
+        $greet = "night";
+    }
+}
+?>
+
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Logo</a>
+        <ul class="right hide-on-med-and-down">
+
+            <?php if (isset($_SESSION["user"])): ?>
+                <li><a class="disabled"><strong><?="Good ".$greet." ".$_SESSION["user"]?></strong></a></li>
+                <li><a class="waves-effect waves-light btn" href="cerrarSesion.php"><i class="material-icons right">directions_run</i>Log Out</a></li>
+            <?php endif; ?>
+
+            <li><a class="profilePic" href="ajustesCuenta.php"><img src="yuna.jpg" alt="Profile Picture" class="circle"></></li>
+        </ul>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+</nav>
+
+<ul class="sidenav" id="mobile-demo">
+    <li>
+        <div class="section"></div>
+        <div class="section"></div>
+        <div class="row valign-wrapper">
+            <div class="col s3 offset-s1">
+                <a href="ajustesCuenta.php"><img src="yuna.jpg" alt="" class="circle responsive-img"></a>
+            </div>
+            <div class="col s8">
+                <span class="black-text">
+                    <?php if (isset($_SESSION["user"])): ?>
+                        <strong><?="Good ".$greet." ".$_SESSION["user"]?></strong>
+                    <?php endif; ?>
+              </span>
+            </div>
+        </div>
+    </li>
+    <?php if (isset($_SESSION["user"])): ?>
+        <li><a class="waves-effect waves-light btn" href="cerrarSesion.php"><i class="material-icons right">directions_run</i>Log Out</a></li>
+    <?php endif; ?>
+</ul>
+
+
 <div class="container">
