--- a/Lab14/_tarjetaPerro.html
+++ b/Lab14/_tarjetaPerro.html
@@ -8,6 +8,7 @@
     </div>
     <div class="card-content">
       <span class="card-title"><strong><?= $name ?></strong><?=" - ".$age ?></span>
+      <span class="card-title"><strong><?= $test ?></strong></span>
     </div>
   </div>
 </div>
