--- a/ExamenP2/_navbar.html
+++ b/ExamenP2/_navbar.html
@@ -1,9 +1,8 @@
 <div class="navbar-fixed">
     <nav>
         <div class="blue darken-1 nav-wrapper">
-            <a href="index.php" class="brand-logo"><acronym title="Desarrollo de aplicaciones web y Bases de datos">Segundo parcial: DAW-BD</acronym></a>
+            <a href="index.php" class="brand-logo">Segundo parcial: DAW-BD</a>
             <ul id="nav-mobile" class="right">
-                <li><a href="#">Consultas</a></li>
             </ul>
         </div>
     </nav>
